--- a/index.html
+++ b/index.html
@@ -48,37 +48,19 @@
       <div class="row">
         <div class="col-md-6">
 
-
+<!-- BFMTV -->
 <iframe frameborder="0" width="100%" height="350px" src="https://www.dailymotion.com/embed/video/xgz4t1?autoPlay=1&mute=1&quality='240'" allowfullscreen allow="autoplay"></iframe>
         </div>
-        <!-- <div class="col-md-4">
-       <iframe frameborder="0" width="100%" height="230px" src="//www.dailymotion.com/embed/video/x3b68jn?autoplay=1&mute=1&quality='240'" allowfullscreen></iframe>
-        </div>
-        <div class="col-md-4">
-            <iframe width="100%" height="230px" src="https://www.youtube.com/embed/y60wDzZt8yg?autoplay=1&mute=1&quality='140'" frameborder="0" allowfullscreen></iframe>
-        </div> -->
-        <!-- <div class="col-md-3">
-        <iframe frameborder="0" width="100%" height="100%" src="//www.dailymotion.com/embed/video/xigbvx?autoplay=1&mute=1&quality='240'" allowfullscreen></iframe>
-        </div> -->
+   
         <div class="col-md-6">
+<!-- FranceInfo -->
         <iframe frameborder="0" width="100%" height="350px" src="https://www.dailymotion.com/embed/video/x4rdeu6?autoPlay=1&mute=1&quality='240'" allowfullscreen allow="autoplay"></iframe>
         </div>
       </div>
 
 
 
-    <!--  <div class="row">
-         <div class="col-md-4">
-        <iframe frameborder="0" width="100%" height="230px" src="//www.dailymotion.com/embed/video/xigbvx?autoplay=1&mute=1&quality='240'" allowfullscreen></iframe>
-        </div>
-        <div class="col-md-4">
-       <iframe frameborder="0" width="100%" height="230px" src="//www.dailymotion.com/embed/video/x2f50ji?autoplay=1&mute=1&quality='240'" allowfullscreen></iframe>
-        </div> -->
-        <!-- <div class="col-md-4">
-        <iframe frameborder="0" width="100%" height="230px" src="//www.dailymotion.com/embed/video/xigc8z?autoplay=1&mute=1&quality='240'" allowfullscreen></iframe>
-        </div>
-
-      </div>-->
+  
 <!--
       <div class="row">
   
@@ -89,46 +71,24 @@
         <iframe width="100%" height="350px" src="https://www.youtube.com/embed/pJC-vohDHl8?autoplay=1&mute=1&quality='140'" frameborder="0" allowfullscreen></iframe>
         </div>
 -->
-        <!-- <div class="col-md-4">
-       <iframe width="100%" height="230px"  src="https://www.rt.com/on-air/embed/" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="col-md-4">
-      <iframe width="100%" height="230px" src="https://www.youtube.com/embed/PkGppXAfX30?autoplay=1&mute=1&quality='140'" frameborder="0" allowfullscreen></iframe>
-    </div>
-
-
-
-      </div>-->
-
+ 
       <div class="row">
 
         <div class="col-md-6">
-       <iframe width="100%" height="350px"  src="https://www.rt.com/on-air/embed/" frameborder="0" allowfullscreen></iframe>
-        </div>
-
+          <!-- RT --> 
+       <!-- <iframe width="100%" height="350px" src="https://www.youtube.com/embed/pJC-vohDHl8?autoplay=1&mute=1&quality='140'" frameborder="0" allowfullscreen allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+       -->
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/_tp8hj7dw8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       
+          </div>
         <div class="col-md-6">
-<!--
-//CNEWS
-<iframe frameborder="0" width="100%" height="350px" src="https://www.dailymotion.com/embed/video/x3b68jn?autoPlay=1&mute=1&quality='240'" allowfullscreen allow="autoplay"></iframe> -->
-
-
+          <!-- CNEWS -->
 <iframe frameborder="0" width="100%" height="350px" src="https://www.dailymotion.com/embed/video/x3b68jn?autoPlay=1&mute=1&quality='240'" allowfullscreen allow="autoplay"></iframe>
-
-
-
-       </div>
+</div>
       </div>
 
 </div>
-      <!-- <hr>
 
-
-
-
-
-      <footer>
-
-      </footer> -->
 
 <script>
 function requestFullScreen(element) {
