--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="col-md-6">
         <!-- EURONEWS -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/_tp8hj7dw8M?autoplay=1&mute=1&quality='140'" frameborder="0"
+          src="https://www.youtube.com/embed/_tp8hj7dw8M?&autoplay=1&mute=1&quality='140'" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-md-6">
