changing CNEWS by France24

--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
       <div class="col-md-6">
         <!-- EURONEWS -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/_tp8hj7dw8M?&autoplay=1&mute=1&quality='140'" frameborder="0"
+          src="https://www.youtube.com/embed/_tp8hj7dw8M?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-md-6">
+         <!-- France24 -->
+        <iframe width="100%" height="350"
+          src="https://www.youtube.com/embed/yN20t84GCPE?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         <!-- CNEWS -->
-        <iframe frameborder="0" width="100%" height="350px"
+        <!-- <iframe frameborder="0" width="100%" height="350px"
           src="https://www.dailymotion.com/embed/video/x3b68jn?autoPlay=1&mute=1&quality='240'" allowfullscreen
-          allow="autoplay"></iframe>
+          allow="autoplay"></iframe> -->
       </div>
     </div>
 
