--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
 
       <div class="col-md-6">
         <!-- FranceInfo -->
-        <iframe frameborder="0" width="100%" height="350px"
-          src="https://www.dailymotion.com/embed/video/x4rdeu6?autoPlay=1&mute=1&quality='240'" allowfullscreen
-          allow="autoplay"></iframe>
+        <iframe width="100%" height="350"
+          src="https://www.youtube.com/embed/wwNZKfBLAsc?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+      </div>
+     
     </div>
 
 
