--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
       <div class="col-md-6">
         <!-- EURONEWS -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/xi3v5W__dQc?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/Q-5_Bg1z5QQ?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-md-6">
          <!-- France24 -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/djXROrzZ9NI?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/bkXn38__Gy0?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- CNEWS -->
