--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
     <div class="row">
 
       <div class="col-md-6">
-        <!-- EURONEWS -->
+        <!-- EURONEWS 
         <iframe width="100%" height="350"
           src="https://www.youtube.com/embed/Q-5_Bg1z5QQ?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+      </div>-->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Q-5_Bg1z5QQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      
       <div class="col-md-6">
          <!-- France24 -->
         <iframe width="100%" height="350"
