--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="col-md-6">
         <!-- EURONEWS -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/Q-5_Bg1z5QQ?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/fJdv9A-_OaA?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
      
