--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col-md-6">
         <!-- FranceInfo -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/wwNZKfBLAsc?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/Z-Nwo-ypKtM?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       </div>
@@ -76,14 +76,14 @@
       <div class="col-md-6">
         <!-- EURONEWS -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/MsN0_WNXvh8?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/lNeiYMv5SeA?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
      
       <div class="col-md-6">
          <!-- France24 -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/bkXn38__Gy0?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/jVYG_eH5UMU?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- CNEWS -->
