--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="col-md-6">
          <!-- France24 -->
         <iframe width="100%" height="350"
-          src="https://www.youtube.com/embed/jVYG_eH5UMU?&autoplay=1&mute=1&vq=tiny" frameborder="0"
+          src="https://www.youtube.com/embed/gxG3pdKvlIs?&autoplay=1&mute=1&vq=tiny" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- CNEWS -->
